fix del login
